add del updata find

--- a/views/indexBack.html
+++ b/views/indexBack.html
@@ -209,7 +209,7 @@
 			</tr>
 					<tr>
 						<td>服务器域名</td>
-						<td>www.h-ui.net</td>
+						<td>www.943711797@qq.com</td>
 			</tr>
 					<tr>
 						<td>服务器端口 </td>
@@ -305,6 +305,7 @@
 <script type="text/javascript" src="lib/layer/2.4/layer.js"></script>
 <script type="text/javascript" src="static/h-ui/js/H-ui.js"></script> 
 <script type="text/javascript" src="static/h-ui.admin/js/H-ui.admin.page.js"></script> 
+
 <!--/_footer /作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
@@ -315,4 +316,6 @@
 
 
 </body>
+
+
 </html>
