--- a/views/login.html
+++ b/views/login.html
@@ -28,7 +28,7 @@
 		<button type="button" class="register-tis" >还有没有账号？</button>
 	</a>	
 </div>
-<a href="loginback" >
+<a href="loginback.html" >
 	<button type="button" class="register-tis">管理员登录</button>
 </a>
 
