--- a/views/loginback.html
+++ b/views/loginback.html
@@ -1,5 +1,5 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html >
+﻿<!DOCTYPE html >
+<html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -13,16 +13,14 @@
 <div class="login-container">
 	<h1>后台管理员登录</h1>
 	
-	
-	<form action="/login" method="post" id="loginForm">
-		<div>
-			<input type="text" name="username" class="usernameBack" placeholder="用户名" autocomplete="off"/>
+		<div id="loginForm">
+			<input type="text" name="username" class="username"id="username"placeholder="用户名" autocomplete="off"/>
 		</div>
 		<div>
-			<input type="password" name="password" class="password" placeholder="密码" oncontextmenu="return false" onpaste="return false" />
+			<input type="password" name="password" class="password" id="password" placeholder="密码" oncontextmenu="return false" onpaste="return false" />
 		</div>
 		<button id="submit" type="submit" onclick="loginback()">登 录</button>
-	</form>
+	
 </div>
 
 
@@ -30,6 +28,7 @@
 <!-- <script src="javascripts/common.js"></script> -->
 <script src="javascripts/jquery.min.js"></script>
 <script src="javascripts/common.js"></script>
+
 <!--背景图片自动更换-->
 <script src="javascripts/supersized.3.2.7.min.js"></script>
 <script src="javascripts/supersized-init.js"></script>
