--- a/views/article-list.html
+++ b/views/article-list.html
@@ -1,4 +1,5 @@
-﻿<!--_meta 作为公共模版分离出去-->
+﻿
+<!--_meta 作为公共模版分离出去-->
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -130,22 +131,7 @@
 				</ul>
 			</dd>
 		</dl>
-		<dl id="menu-product">
-			<dt><i class="Hui-iconfont">&#xe620;</i> 产品管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-			<dd>
-				<ul>
-					<li>
-						<a href="product-brand.html" title="品牌管理">品牌管理</a>
-					</li>
-					<li>
-						<a href="product-category.html" title="分类管理">分类管理</a>
-					</li>
-					<li>
-						<a href="product-list.html" title="产品管理">产品管理</a>
-					</li>
-				</ul>
-			</dd>
-		</dl>
+
 		<dl id="menu-comments">
 			<dt><i class="Hui-iconfont">&#xe622;</i> 评论管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
@@ -159,34 +145,7 @@
 				</ul>
 			</dd>
 		</dl>
-		<dl id="menu-member">
-			<dt><i class="Hui-iconfont">&#xe60d;</i> 会员管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-			<dd>
-				<ul>
-					<li>
-						<a href="member-list.html" title="会员列表">会员列表</a>
-					</li>
-					<li>
-						<a href="member-del.html" title="删除的会员">删除的会员</a>
-					</li>
-					<li>
-						<a href="member-level.html" title="等级管理">等级管理</a>
-					</li>
-					<li>
-						<a href="member-scoreoperation.html" title="积分管理">积分管理</a>
-					</li>
-					<li>
-						<a href="member-record-browse.html" title="浏览记录">浏览记录</a>
-					</li>
-					<li>
-						<a href="member-record-download.html" title="下载记录">下载记录</a>
-					</li>
-					<li>
-						<a href="member-record-share.html" title="分享记录">分享记录</a>
-					</li>
-				</ul>
-			</dd>
-		</dl>
+		
 		<dl id="menu-admin">
 			<dt><i class="Hui-iconfont">&#xe62d;</i> 管理员管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
@@ -203,34 +162,7 @@
 				</ul>
 			</dd>
 		</dl>
-		<dl id="menu-tongji">
-			<dt><i class="Hui-iconfont">&#xe61a;</i> 系统统计<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-			<dd>
-				<ul>
-					<li>
-						<a href="charts-1.html" title="折线图">折线图</a>
-					</li>
-					<li>
-						<a href="charts-2.html" title="时间轴折线图">时间轴折线图</a>
-					</li>
-					<li>
-						<a href="charts-3.html" title="区域图">区域图</a>
-					</li>
-					<li>
-						<a href="charts-4.html" title="柱状图">柱状图</a>
-					</li>
-					<li>
-						<a href="charts-5.html" title="饼状图">饼状图</a>
-					</li>
-					<li>
-						<a href="charts-6.html" title="3D柱状图">3D柱状图</a>
-					</li>
-					<li>
-						<a href="charts-7.html" title="3D饼状图">3D饼状图</a>
-					</li>
-				</ul>
-			</dd>
-		</dl>
+		
 		<dl id="menu-system">
 			<dt><i class="Hui-iconfont">&#xe62e;</i> 系统管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
@@ -271,26 +203,18 @@
 	<div class="Hui-article">
 		<article class="cl pd-20">
 			<div class="text-c">
-				<span class="select-box inline">
-				<select name="" class="select">
-					<option value="0">全部分类</option>
-					<option value="1">分类一</option>
-					<option value="2">分类二</option>
-				</select>
-				</span>
-				日期范围：
-				<input type="text" onfocus="WdatePicker({maxDate:'#F{$dp.$D(\'logmax\')||\'%y-%M-%d\'}'})" id="logmin" class="input-text Wdate" style="width:120px;">
-				-
-				<input type="text" onfocus="WdatePicker({minDate:'#F{$dp.$D(\'logmin\')}',maxDate:'%y-%M-%d'})" id="logmax" class="input-text Wdate" style="width:120px;">
-				<input type="text" name="" id="" placeholder=" 资讯名称" style="width:250px" class="input-text">
-				<button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜资讯</button>
-			</div>
+				
+				<form action="/search" method="post" >
+				<input type="text" name="add_id" id="add_id"  placeholder=" 资讯id" style="width:250px" class="input-text">
+				<input type="text" name="add_title" id="add_title"  placeholder=" 资讯标题" style="width:250px" class="input-text">
+				<button class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜资讯</button>
+			</form></div>
 			<div class="cl pd-5 bg-1 bk-gray mt-20">
 				<span class="l">
-				<a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a>
-				<a class="btn btn-primary radius" data-title="添加资讯" _href="article-add.html" onclick="article_add('添加资讯','article-add.html')" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加资讯</a>
+			
+				<a class="btn btn-primary radius" data-title="添加资讯" href="article-add.html"><i class="Hui-iconfont">&#xe600;</i> 添加资讯</a>
 				</span>
-				<span class="r">共有数据：<strong>54</strong> 条</span>
+				<span class="r">共有数据：<strong>3</strong> 条</span>
 			</div>
 			<div class="mt-20">
 				<table class="table table-border table-bordered table-bg table-hover table-sort">
@@ -308,32 +232,21 @@
 						</tr>
 					</thead>
 					<tbody>
+						<% for(var i=0;i<datas.length;i++){ %>
 						<tr class="text-c">
 							<td><input type="checkbox" value="" name=""></td>
-							<td>10001</td>
-							<td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10001')" title="查看">资讯标题</u></td>
-							<td>行业动态</td>
-							<td>H-ui</td>
-							<td>2014-6-11 11:11:42</td>
-							<td>21212</td>
+							<td><%=datas[i].event_id%></td>
+							<td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10001')" title="查看"><%=datas[i].event_title%></u></td>
+							<td><%=datas[i].event_kind%></td>
+							<td><%=datas[i].event_cource%></td>
+							<td><%=datas[i].event_date%></td>
+							<td>0</td>
 							<td class="td-status"><span class="label label-success radius">已发布</span></td>
 							<td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_stop(this,'10001')" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a>
-								<a style="text-decoration:none" class="ml-5" onClick="article_edit('资讯编辑','article-add.html','10001')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a>
-								<a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-						</tr>
-						<tr class="text-c">
-							<td><input type="checkbox" value="" name=""></td>
-							<td>10002</td>
-							<td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10002')" title="查看">资讯标题</u></td>
-							<td>行业动态</td>
-							<td>H-ui</td>
-							<td>2014-6-11 11:11:42</td>
-							<td>21212</td>
-							<td class="td-status"><span class="label label-success radius">草稿</span></td>
-							<td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_shenhe(this,'10001')" href="javascript:;" title="审核">审核</a>
-								<a style="text-decoration:none" class="ml-5" onClick="article_edit('资讯编辑','article-add.html','10001')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a>
-								<a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-						</tr>
+								<a style="text-decoration:none" class="ml-5" href="/article-list.html/Update/<%=datas[i].event_id%>" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a>
+								<a style="text-decoration:none" class="ml-5"  href="/article-list.html/<%=datas[i].event_id%>" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+						</tr><%}%>
+						
 					</tbody>
 				</table>
 			</div>
@@ -372,31 +285,8 @@ function article_add(title,url,w,h){
 	layer.full(index);
 }
 /*资讯-编辑*/
-function article_edit(title,url,id,w,h){
-	var index = layer.open({
-		type: 2,
-		title: title,
-		content: url
-	});
-	layer.full(index);
-}
-/*资讯-删除*/
-function article_del(obj,id){
-	layer.confirm('确认要删除吗？',function(index){
-		$.ajax({
-			type: 'POST',
-			url: '',
-			dataType: 'json',
-			success: function(data){
-				$(obj).parents("tr").remove();
-				layer.msg('已删除!',{icon:1,time:1000});
-			},
-			error:function(data) {
-				console.log(data.msg);
-			},
-		});
-	});
-}
+
+
 
 /*资讯-审核*/
 function article_shenhe(obj,id){
