dynamic page and all (更新数据库设计，新增资讯页面，预备评论功能)

--- a/public/stylesheets/css/styleone.css
+++ b/public/stylesheets/css/styleone.css
@@ -2056,7 +2056,7 @@ textarea:-ms-input-placeholder {
         font-size: 5em;
         line-height: 56px;
         padding-top: 0.8em;
-        background: url(../images/webp.png)no-repeat 3px 44px;
+        background: url(../images/black.jpg)no-repeat 3px 44px;
         background-size: 43px;
         padding-left: 44px;
     }
