--- a/views/article-add.html
+++ b/views/article-add.html
@@ -26,8 +26,9 @@
 			<input type="text" name="add_cource" class="add_cource" placeholder="来源"  />
 		</div>
 		<div>
-			<input type="text" name="add_date" class="add_date" placeholder="更新时间" />
+			<input type="text" name="add_massage" class="add_massage" placeholder="具体信息" />
 		</div>
+		
 		<button id="submit" type="submit" >提交</button>
 	</form>
 
