--- a/views/index.html
+++ b/views/index.html
@@ -63,7 +63,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<a href="#about" class="scroll">关于</a>
 									</li>
 									<li>
-										<a href="#services" class="scroll">资讯</a>
+										<a href="/information" class="register-tis">资讯</a>
 									</li>
 									<li>
 										<a href="#team" class="scroll">团队</a>
@@ -75,9 +75,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<a href="#contact" class="scroll">联系</a>
 									</li>
 									<li>
-									<a href="register" >
-										<button type="button" class="register-tis">立即注册</button>
-									</a>
+								<a href="register"	class="register-tis">立即注册</a>
 									</li>
 								</ul>
                                         
