修改了不能二次登录时bug，增加了评论功能
git commit -m 修改了不能二次登录时bug，增加了评论功能

--- a/public/stylesheets/css/bootstrap.css
+++ b/public/stylesheets/css/bootstrap.css
@@ -2554,7 +2554,7 @@ output {
   font-size: 14px;
   line-height: 1.42857143;
   color: #555;
-  background-color: #fff;
+  background-color: rgb(223, 217, 217);
   background-image: none;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -2587,7 +2587,7 @@ output {
 .form-control[disabled],
 .form-control[readonly],
 fieldset[disabled] .form-control {
-  background-color: #eee;
+  background-color: rgb(204, 200, 200);
   opacity: 1;
 }
 .form-control[disabled],
