--- a/views/index.html
+++ b/views/index.html
@@ -75,7 +75,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<a href="#contact" class="scroll">联系</a>
 									</li>
 									<li>
-								<a href="register"	class="register-tis">立即注册</a>
+								<a href="login"	class="register-tis">立即登录</a>
 									</li>
 								</ul>
                                         
@@ -339,8 +339,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- gallery画廊 -->
 	<div class="gallery" id="gallery">
 		<div class="container">
-			<h3 class="w3layouts-heading">Our
-				<span>Gallery</span>
+			<h3 class="w3layouts-heading">我们的
+				<span>画廊</span>
 			</h3>
 		</div>
 		<div class="w3layouts-grids gal-agileits-w3layouts">
@@ -380,8 +380,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- testimonials -->
 	<div class="testimonials" id="testimonials">
 		<div class="container">
-			<h3 class="w3layouts-heading">Happy
-				<span>Customers</span>
+			<h3 class="w3layouts-heading">我们的
+				<span>主力</span>
 			</h3>
 			<div class="col-md-12 col-xs-12" data-wow-delay="0.2s">
 				<div class="carousel slide" data-ride="carousel" id="quote-carousel">
@@ -438,7 +438,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- /contact -->
 	<div class="copy">
 		<p>© 2021 Kinjaz . All Rights Reserved | Design by
-			<a href="http://w3layouts.com/">W3layouts</a>
+			<a href="http://node.js.com/">node.js</a>
 		</p>
 	</div>
 	<!--/footer -->
