--- a/views/information.html
+++ b/views/information.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>资讯详情</title>
+	
     <script type="application/x-javascript">
 		addEventListener("load", function () {
 			setTimeout(hideURLbar, 0);
@@ -25,6 +26,7 @@
 	<!--style-sheet-->
 	<!--fonts-->
 	<link href="//fonts.googleapis.com/css?family=Raleway:200,300,400,600,700,800,900" rel="stylesheet">
+	
 	<!--//fonts-->
 </head>
 <body>
@@ -35,7 +37,7 @@
 				<span>动态</span>
 			</h3>
 			<div class="events-row">
-				<% x=0;%> 
+				<% x=-1;%> 
 				<% for(var j=0;j<3;j++){ %>
 				<div class="col-md-4 events-grids">
 					
@@ -57,11 +59,11 @@
 							<div class="event-bottom">
 								<ul>
 									<li>
-										<a href="#">
+										<a href="#" id="thumb">
 											<span class="fa fa-thumbs-o-up" aria-hidden="true"></span> <%=data[x].event_tumb%></a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="/comment/<%=data[x].event_id%>">
 											<span class="fa fa-comment" aria-hidden="true"></span> <%=data[x].event_comment%></a>
 									</li>
 									<li>
@@ -75,63 +77,48 @@
 					</div>
 					<%}%>
 				</div><%}%>
-			
-					<!-- <div class="thumbnail events-wthree">
-						<img src="images/g3.jpg" class="img-responsive" alt="">
-						<div class="social-icons events-icons right-w3-agile1-sectn fotw3ls3">
-							<div class="caption">
-								<h4>
-									<a href="#" data-toggle="modal" data-target="#myModal1">2222222</a>
-								</h4>
-								<div class="event-top">
-									<p>
-										<span class="fa fa-calendar" aria-hidden="true"></span> 2222222222222222</p>
-								</div>
-								<p class="paragraph-w3l">222222222222222222222222222222222222222222222222222222222222222</p>
-							</div>
-							<div class="event-bottom">
-								<ul>
-									<li>
-										<a href="#">
-											<span class="fa fa-thumbs-o-up" aria-hidden="true"></span> 22</a>
-									</li>
-									<li>
-										<a href="#">
-											<span class="fa fa-comment" aria-hidden="true"></span> 222</a>
-									</li>
-									<li>
-										<a href="#">
-											<span class="fa fa-facebook"></span>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div> -->
-				
 				<div class="clearfix"> </div>
 			</div>
 		</div>
 
 	</div>
 	<!-- //Events -->
-	<div class="events" id="events">
+	<div class="events" id="events" >
 		<div class="container">
-			<h3 class="w3layouts-heading">评论
-				<span>专区</span>
+			<h3 class="w3layouts-heading">最新
+				<span>评论</span>
 			</h3>
-			<div class="events-row">
-			
-				<div class="col-md-4 events-grids">
-					</div>
-				</div>
+		
+<tbody action="/comment" method="GET">
+	<tr>
+		<% for(var j=0;j<5;j++){ %>
+	<td>昵称：<%=data[j].comment_user%> </td>
+	<td>评论时间：<%=data[j].comment_date%></td>
+	<td><input class="form-control" type="text" rows="3" value="<%=data[j].comment%>" readonly></td>
+	
+	<%}%>
+		</tr></a>
+</tbody>
+
+			<!-- <form action="/comment" method="GET" >
+				<div class="form-group">
+					<label for="name">写评论</label>
+				</div><div>
+					<textarea class="form-control" rows="3" placeholder="写下您的评论...."></textarea>
+				</div> -->
+			     <!-- <button id="submit" type="submit" onclick="comment()" style="float: right;">评论</button> -->
+				 <!-- <button type="submit" class="btn btn-info" onclick="comment()"style="float: right;">评论</button>
+			 </form>	 -->
+			————————————————
+		
+				
 			</div>
 		</div>
 
 <script type="text/javascript" src="javascripts/js/jquery.flexisel.js"></script>
 <!-- //about-section-flexisel-slider-->
 <script src="javascripts/js/jzBox.js"></script>
+
 <!-- start-smoth-scrolling -->
 <script type="text/javascript" src="javascripts/js/move-top.js"></script>
 <script type="text/javascript" src="javascripts/js/easing.js"></script>
@@ -161,11 +148,25 @@
             easingType: 'easeOutQuart'
         });
     });
+
 </script>
+
 <a href="#home" class="scroll" id="toTop" style="display: block;">
     <span id="toTopHover" style="opacity: 1;"> </span>
 </a>
 <!-- //smooth scrolling -->
 <script src="javascripts/js/bootstrap.js"></script>
+<!-- <script>
+	document.getElementById("thumb").onclick=function(){
+		var thumbNum = document.getElementById("thumb"); -->
+<!-- // 		window.open("test2.html?keyword=" + thumbNum.value);
+// 		thumbNum=thumbNum+1
+// 		alert(thumbNum);
+// 		console.log("次数为"+thumbNum)
+// 	}
+// </script> -->
+	
+
+
 </body>
 </html>
