--- a/views/error.html
+++ b/views/error.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="login" >出现致命错误,返回用户登录界面</a>
+    <a href="/login" >出现致命错误,返回用户登录界面</a>
 </body>
 </html>
