--- a/views/information.html
+++ b/views/information.html
@@ -30,6 +30,26 @@
 	<!--//fonts-->
 </head>
 <body>
+	<div class="collapse navbar-collapse cl-effect-13" id="bs-example-navbar-collapse-1">
+
+		<ul class="nav navbar-nav navbar-right">
+			<li>
+				<a href="/index" class="active scroll">首页</a>
+			</li>
+			
+			<li>
+				<a href="#events" class="scroll">最新动态</a>
+			</li>
+			<li>
+				<a href="#comments" class="scroll">精彩评论</a>
+			</li>
+			
+			<li>
+		<a href="/login"	class="register-tis">立即登录</a>
+			</li>
+		</ul>
+				
+	</div>
     <!-- Events -->
 	<div class="events" id="events">
 		<div class="container">
@@ -82,8 +102,9 @@
 		</div>
 
 	</div>
-	<!-- //Events -->
-	<div class="events" id="events" >
+	<!-- //评论 -->
+
+	<div class="comments" id="comments" >
 		<div class="container">
 			<h3 class="w3layouts-heading">最新
 				<span>评论</span>
