新增拦截器功能，新增切换用户等功能

--- a/views/comment.html
+++ b/views/comment.html
@@ -38,7 +38,9 @@
             <li>
                 <a href="/information" class="register-tis">资讯</a>
             </li>
-          
+            <li>
+                <a href="#"	class="scroll">欢迎你，<%=user%></a>
+            </li>
         </ul>
                 
     </div>
