--- a/views/index.html
+++ b/views/index.html
@@ -75,7 +75,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<a href="#contact" class="scroll">联系</a>
 									</li>
 									<li>
-								<a href="login"	class="register-tis">立即登录</a>
+									<a href="#"	class="scroll">欢迎你，<%=user%></a>
+								     </li>
+									<li>
+								<a href="login"	class="register-tis">切换用户</a>
 									</li>
 								</ul>
                                         
