--- a/views/indexBack.html
+++ b/views/indexBack.html
@@ -25,7 +25,7 @@
 <!--/meta 作为公共模版分离出去-->
 
 <title>H-ui.admin v3.0</title>
-<meta name="keywords" content="H-ui.admin v3.0,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
+<meta name="keywords" content="">
 <meta name="description" content="H-ui.admin v3.0，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
 </head>
 <body>
@@ -106,17 +106,7 @@
 	</dd>
 </dl>
 		
-		<dl id="menu-admin">
-			<dt><i class="Hui-iconfont">&#xe62d;</i> 管理员管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-			<dd>
-				<ul>
-					<li><a href="admin-role.html" title="角色管理">角色管理</a></li>
-					<li><a href="admin-permission.html" title="权限管理">权限管理</a></li>
-					<li><a href="admin-list.html" title="管理员列表">管理员列表</a></li>
-		</ul>
-	</dd>
-</dl>
-		
+	
 	
 </div>
 </aside>
@@ -144,9 +134,7 @@
 						<th>统计</th>
 						<th>资讯库</th>
 						<th>图片库</th>
-						<th>产品库</th>
-						<th>用户</th>
-						<th>管理员</th>
+						
 			</tr>
 		</thead>
 				<tbody>
