--- a/views/information.html
+++ b/views/information.html
@@ -43,9 +43,11 @@
 			<li>
 				<a href="#comments" class="scroll">精彩评论</a>
 			</li>
-			
 			<li>
-		<a href="/login"	class="register-tis">立即登录</a>
+				<a href="#"	class="scroll">欢迎你，<%=user%></a>
+				 </li>
+			<li>
+		        <a href="/login"	class="register-tis">切换用户</a>
 			</li>
 		</ul>
 				
