--- a/views/article-list.html
+++ b/views/article-list.html
@@ -8,8 +8,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 <meta http-equiv="Cache-Control" content="no-siteapp" />
-<link rel="Bookmark" href="favicon.ico" >
-<link rel="Shortcut Icon" href="favicon.ico" />
+<link rel="Bookmark" href="black.jpg" >
+<link rel="Shortcut Icon" href="black.jpg" />
 <!--[if lt IE 9]>
 <script type="text/javascript" src="lib/html5.js"></script>
 <script type="text/javascript" src="lib/respond.min.js"></script>
@@ -34,8 +34,8 @@
 <header class="navbar-wrapper">
 	<div class="navbar navbar-fixed-top">
 		<div class="container-fluid cl">
-			<a class="logo navbar-logo f-l mr-10 hidden-xs" href="/aboutHui.shtml">H-ui.admin</a>
-			<a class="logo navbar-logo-m f-l mr-10 visible-xs" href="/aboutHui.shtml">H-ui</a>
+			<a class="logo navbar-logo f-l mr-10 hidden-xs" href="/aboutHui.shtml">kinjaz.admin</a>
+			<a class="logo navbar-logo-m f-l mr-10 visible-xs" href="/aboutHui.shtml">kinjaz</a>
 			<span class="logo navbar-slogan f-l mr-10 hidden-xs">v3.0</span>
 			<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
 			<nav class="nav navbar-nav">
@@ -61,16 +61,16 @@
 			</nav>
 			<nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
 				<ul class="cl">
-					<li>超级管理员</li>
+					<li>超级管理员:</li>
 					<li class="dropDown dropDown_hover">
-						<a href="#" class="dropDown_A">admin <i class="Hui-iconfont">&#xe6d5;</i></a>
+						<a href="#" class="dropDown_A"><%=AccountBack%> <i class="Hui-iconfont">&#xe6d5;</i></a>
 						<ul class="dropDown-menu menu radius box-shadow">
-							<li><a href="javascript:;" onClick="myselfinfo()">个人信息</a></li>
+							<li><a href="/index" >前往主页</a></li>
 							<li>
-								<a href="#">切换账户</a>
+								<a href="loginback.html">切换账户</a>
 							</li>
 							<li>
-								<a href="#">退出</a>
+								<a href="loginback.html">退出</a>
 							</li>
 						</ul>
 					</li>
@@ -139,52 +139,11 @@
 					<li>
 						<a href="http://h-ui.duoshuo.com/admin/" title="评论列表">评论列表</a>
 					</li>
-					<li>
-						<a href="feedback-list.html" title="意见反馈">意见反馈</a>
-					</li>
+					
 				</ul>
 			</dd>
 		</dl>
 		
-		<dl id="menu-admin">
-			<dt><i class="Hui-iconfont">&#xe62d;</i> 管理员管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-			<dd>
-				<ul>
-					<li>
-						<a href="admin-role.html" title="角色管理">角色管理</a>
-					</li>
-					<li>
-						<a href="admin-permission.html" title="权限管理">权限管理</a>
-					</li>
-					<li>
-						<a href="admin-list.html" title="管理员列表">管理员列表</a>
-					</li>
-				</ul>
-			</dd>
-		</dl>
-		
-		<dl id="menu-system">
-			<dt><i class="Hui-iconfont">&#xe62e;</i> 系统管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-			<dd>
-				<ul>
-					<li>
-						<a href="system-base.html" title="系统设置">系统设置</a>
-					</li>
-					<li>
-						<a href="system-category.html" title="栏目管理">栏目管理</a>
-					</li>
-					<li>
-						<a href="system-data.html" title="数据字典">数据字典</a>
-					</li>
-					<li>
-						<a href="system-shielding.html" title="屏蔽词">屏蔽词</a>
-					</li>
-					<li>
-						<a href="system-log.html" title="系统日志">系统日志</a>
-					</li>
-				</ul>
-			</dd>
-		</dl>
 	</div>
 </aside>
 <div class="dislpayArrow hidden-xs">
@@ -226,7 +185,7 @@
 							<th width="80">分类</th>
 							<th width="80">来源</th>
 							<th width="120">更新时间</th>
-							<th width="75">浏览次数</th>
+							<th width="75">评论量</th>
 							<th width="60">发布状态</th>
 							<th width="120">操作</th>
 						</tr>
@@ -240,7 +199,7 @@
 							<td><%=datas[i].event_kind%></td>
 							<td><%=datas[i].event_cource%></td>
 							<td><%=datas[i].event_date%></td>
-							<td>0</td>
+							<td><%=datas[i].event_comment%></td>
 							<td class="td-status"><span class="label label-success radius">已发布</span></td>
 							<td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_stop(this,'10001')" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a>
 								<a style="text-decoration:none" class="ml-5" href="/article-list.html/Update/<%=datas[i].event_id%>" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a>
