--- a/views/article-comment.html
+++ b/views/article-comment.html
@@ -1,4 +1,4 @@
-﻿
+
 <!--_meta 作为公共模版分离出去-->
 <!DOCTYPE HTML>
 <html>
@@ -25,7 +25,7 @@
 <![endif]-->
 <!--/meta 作为公共模版分离出去-->
 
-<title>资讯列表 - 资讯管理 </title>
+<title>资讯列表 - 资讯管理 - </title>
 <meta name="keywords" content="H-ui.admin v3.0,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
 <meta name="description" content="H-ui.admin v3.0，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
 </head>
@@ -47,8 +47,9 @@
 								<a href="javascript:;" onclick="article_add('添加资讯','article-add.html')"><i class="Hui-iconfont">&#xe616;</i> 资讯</a>
 							</li>
 							<li>
-								<a href="javascript:;" onclick="picture_add('添加图片','picture-add.html')"><i class="Hui-iconfont">&#xe613;</i> 图片</a>
+								<a href="javascript:;" onclick="picture_add('添加资讯','picture-add.html')"><i class="Hui-iconfont">&#xe613;</i> 图片</a>
 							</li>
+							
 							
 						</ul>
 					</li>
@@ -111,7 +112,7 @@
 			<dd style="display:block">
 				<ul>
 					<li class="current">
-						<a href="article-list.html" title="资讯管理">资讯管理</a>
+						<a href="article-comment.html" title="资讯管理">资讯管理</a>
 					</li>
 				</ul>
 			</dd>
@@ -149,39 +150,32 @@
 <section class="Hui-article-box">
 	<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页
 		<span class="c-gray en">&gt;</span>
-		资讯管理
+		评论管理
 		<span class="c-gray en">&gt;</span>
-		资讯列表
-		<a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a>
+		评论列表
+		<a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="article-comment.html" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a>
 	</nav>
 	<div class="Hui-article">
 		<article class="cl pd-20">
 			<div class="text-c">
 				
-				<form action="/search" method="post" >
-				<input type="text" name="add_id" id="add_id"  placeholder=" 资讯id" style="width:250px" class="input-text">
-				<input type="text" name="add_title" id="add_title"  placeholder=" 资讯标题" style="width:250px" class="input-text">
-				<button class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜资讯</button>
+				<form action="/commentSearch" method="post" >
+				<input type="text" name="comm_id" id="comm_id"  placeholder=" 分类id" style="width:250px" class="input-text">
+                <input type="text" name="c_id" id="c_id" placeholder="id" style="width:250px" class="input-text">
+                <input type="text" name="commentTen" id="commentTen" placeholder="评论内容" style="width:250px" class="input-text">
+				<button class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜评论</button>
 			</form></div>
-			<div class="cl pd-5 bg-1 bk-gray mt-20">
-				<span class="l">
-			
-				<a class="btn btn-primary radius" data-title="添加资讯" href="article-add.html"><i class="Hui-iconfont">&#xe600;</i> 添加资讯</a>
-				</span>
-				
-			</div>
+		
 			<div class="mt-20">
 				<table class="table table-border table-bordered table-bg table-hover table-sort">
 					<thead>
 						<tr class="text-c">
 							<th width="25"><input type="checkbox" name="" value=""></th>
 							<th width="80">ID</th>
-							<th>标题</th>
-							<th width="80">分类</th>
-							<th width="80">来源</th>
-							<th width="120">更新时间</th>
-							<th width="75">评论量</th>
-							<th width="60">发布状态</th>
+							<th width="80">分类id</th>
+							<th width="80">用户名</th>
+							<th width="120">评论内容</th>
+							<th width="75">评论时间</th>
 							<th width="120">操作</th>
 						</tr>
 					</thead>
@@ -189,16 +183,14 @@
 						<% for(var i=0;i<datas.length;i++){ %>
 						<tr class="text-c">
 							<td><input type="checkbox" value="" name=""></td>
-							<td><%=datas[i].event_id%></td>
-							<td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10001')" title="查看"><%=datas[i].event_title%></u></td>
-							<td><%=datas[i].event_kind%></td>
-							<td><%=datas[i].event_cource%></td>
-							<td><%=datas[i].event_date%></td>
-							<td><%=datas[i].event_comment%></td>
-							<td class="td-status"><span class="label label-success radius">已发布</span></td>
+							<td><%=datas[i].comment_id%></td>
+							<!-- <td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10001')" title="查看"><%=datas[i].event_title%></u></td> -->
+							<td><%=datas[i].comment_typeid%></td>
+							<td><%=datas[i].comment_user%></td>
+							<td><%=datas[i].comment%></td>
+							<td><%=datas[i].comment_date%></td>
 							<td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_stop(this,'10001')" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a>
-								<a style="text-decoration:none" class="ml-5" href="/article-list.html/Update/<%=datas[i].event_id%>" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a>
-								<a style="text-decoration:none" class="ml-5"  href="/article-list.html/<%=datas[i].event_id%>" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+								<a style="text-decoration:none" class="ml-5"  href="/article-comment.html/<%=datas[i].comment_id%>" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 						</tr><%}%>
 						
 					</tbody>
