--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,8 @@
 	<meta charset="utf-8">
 	<meta name="keywords" content="Stereo Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
+<link rel="Bookmark" href="stylesheets/images/black.jpg" >
+<link rel="Shortcut Icon" href="stylesheets/images/black.jpg" />
 	<script type="application/x-javascript">
 		addEventListener("load", function () {
 			setTimeout(hideURLbar, 0);
@@ -71,9 +73,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<li>
 										<a href="#gallery" class="scroll">画廊</a>
 									</li>
-									<li>
-										<a href="#contact" class="scroll">联系</a>
-									</li>
+									
 									<li>
 									<a href="#"	class="scroll">欢迎你，<%=user%></a>
 								     </li>
