--- a/views/article-add.html
+++ b/views/article-add.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>kinjaz-Arena</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
+<link rel="Bookmark" href="stylesheets/images/black.jpg" >
+<link rel="Shortcut Icon" href="stylesheets/images/black.jpg" />
 <link rel="stylesheet" href="stylesheets/style.css" />
 
 <body>
