--- a/views/error.html
+++ b/views/error.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="Bookmark" href="stylesheets/images/black.jpg" >
+    <link rel="Shortcut Icon" href="stylesheets/images/black.jpg" />
+    <title>错误页面</title>
 </head>
 <body>
     <a href="/login" >出现致命错误,返回用户登录界面</a>
