--- a/views/information.html
+++ b/views/information.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="Bookmark" href="stylesheets/images/black.jpg" >
+    <link rel="Shortcut Icon" href="stylesheets/images/black.jpg" />  
     <title>资讯详情</title>
 	
     <script type="application/x-javascript">
