--- a/views/picture-add.html
+++ b/views/picture-add.html
@@ -6,6 +6,8 @@
 <title>kinjaz-Arena</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
+<link rel="Bookmark" href="stylesheets/images/black.jpg" >
+<link rel="Shortcut Icon" href="stylesheets/images/black.jpg" />
 <link rel="stylesheet" href="stylesheets/style.css" />
 
 <body>
