--- a/views/comment.html
+++ b/views/comment.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Bookmark" href="stylesheets/images/black.jpg" >
-<link rel="Shortcut Icon" href="stylesheets/images/black.jpg" />
+    <link rel="Bookmark" href="http://localhost:3000/stylesheets/images/black.jpg" >
+<link rel="Shortcut Icon" href="http://localhost:3000/stylesheets/images/black.jpg" />
     <title>评论专区</title>
     <script type="application/x-javascript">
 		addEventListener("load", function () {
