--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -223,120 +222,45 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!-- title-with-image -->
 		<div class="title-img white-img">
 			<div class="container">
-				<h3 class="bold-title black-title">我们的团队</h3>
+				<h3 class="w3layouts-heading">我们的
+					<span>团队</span></h3>
 			</div>
 		</div>
 		<!--// title-with-image -->
 		<div class="container">
 			<div class="agileits-w3layouts-team-grids">
+				<% for(var i=0;i<4;i++){ %>
 				<div class="col-md-3 col-sm-3 col-xs-6 agileits-w3layouts-team-grid">
 					<div class="team-info">
-						<img src="images/t1.jpg" alt="">
+						<img src=<%=datas[i].indicator_img%> alt="">
 						<div class="team-caption">
-							<h4>Amanda Stuard</h4>
-							<p>Singer</p>
+							<h4><%=datas[i].indicator_name%></h4>
+							<p><%=datas[i].indicator_profe%></p>
 							<ul>
 								<li>
 									<a href="#">
-										<i class="fa fa-facebook"></i>
+										<i class="fa fa-qq"></i>
 									</a>
 								</li>
 								<li>
 									<a href="#">
-										<i class="fa fa-twitter"></i>
+										<i class="fa fa-weixin"></i>
 									</a>
 								</li>
 								<li>
-									<a href="#">
-										<i class="fa fa-rss"></i>
+									<a href=<%=datas[i].indicator_weibo%>>
+										<i class="fa fa-weibo"></i>
 									</a>
 								</li>
 							</ul>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-3 col-sm-3 col-xs-6 agileits-w3layouts-team-grid">
-					<div class="team-info">
-						<img src="images/t2.jpg" alt="">
-						<div class="team-caption">
-							<h4>Mike Brendon</h4>
-							<p>Musician</p>
-							<ul>
-								<li>
-									<a href="#">
-										<i class="fa fa-facebook"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-twitter"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-rss"></i>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-3 col-xs-6 agileits-w3layouts-team-grid">
-					<div class="team-info">
-						<img src="images/t3.jpg" alt="">
-						<div class="team-caption">
-							<h4>Mark Wilson</h4>
-							<p>Musician</p>
-							<ul>
-								<li>
-									<a href="#">
-										<i class="fa fa-facebook"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-twitter"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-rss"></i>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-3 col-xs-6 agileits-w3layouts-team-grid">
-					<div class="team-info">
-						<img src="images/t4.jpg" alt="">
-						<div class="team-caption">
-							<h4>Steven Wright</h4>
-							<p>dancers</p>
-							<ul>
-								<li>
-									<a href="#">
-										<i class="fa fa-facebook"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-twitter"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-rss"></i>
-									</a>
-								</li>
-							</ul> -->
-						</div>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
+				</div><%}%>
 			</div>
-		</div>
-	</div>
+	 </div>
+</div>
+				<div class="clearfix"> </div>
+	
 	<!-- //team -->
 
 	<!-- gallery画廊 -->
@@ -433,10 +357,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- testimonials -->
 
 
-	<!-- map -->
+	<!-- map --><div class="container">
+			<h3 class="w3layouts-heading">我们的
+				<span>位置</span>
+			</h3>
 	<div class="map">
-		<iframe src="https://map.baidu.com/@12892692.072405854,3342375.285,16.12z"></iframe>
+		<iframe src="https://map.baidu.com/poi/%E8%88%9E%E9%82%A6KINJAZ%20DOJO%20BEIJING(%E5%8C%97%E4%BA%AC%E5%A4%AA%E5%8F%A4%E9%87%8C%E5%BA%97)/@12964503.209599253,4830190.047421484,19.72z?uid=78c14bc4ba2847466d20b92f&ugc_type=3&ugc_ver=1&device_ratio=2&compat=1&querytype=detailConInfo&da_src=shareurl"></iframe>
 	</div>
+	</div>
+
 	<!-- //map -->
 	<!-- /contact -->
 	<div class="copy">
